test/modules/envoy_config/docker-compose.yml
version: '3.7'

services:
  envoy:
    image: ${ENVOY_IMAGE}:${ENVOY_TAG}
    ports:
      - 50051:50051
      - 9001:9001
    volumes:
      - ./:/etc/envoy
    command: /usr/local/bin/envoy -c /etc/envoy/envoy.yaml
