test/modules/envoy_config/envoy.yaml
# Envoy configuration for integration test
static_resources:
  listeners:
    - name: frontend_listener
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 50051
      filter_chains:
        - filters:
            - name: envoy.http_connection_manager
              config:
                http_filters:
                  - name: envoy.grpc_web
                  - name: envoy.cors
                  - name: envoy.router
                codec_type: auto
                stat_prefix: ingress_http
                route_config:
                  name: scalar_route
                  virtual_hosts:
                    - name: scalar_service
                      domains:
                        - "*"
                      routes:
                        - match:
                            prefix: "/rpc.LedgerPrivileged"
                            grpc: {}
                          route:
                            cluster: scalar-privileged
                        - match:
                            prefix: "/rpc.LedgerPrivileged"
                            headers:
                              - name: "X-User-Agent"
                                prefix_match: "grpc-web-javascript"
                          route:
                            cluster: scalar-privileged
                        - match:
                            prefix: "/"
                            grpc: {}
                          route:
                            cluster: scalar
                        - match:
                            prefix: "/"
                            headers:
                              - name: "X-User-Agent"
                                prefix_match: "grpc-web-javascript"
                          route:
                            cluster: scalar
                        - match:
                            prefix: "/"
                          route:
                            cluster: monitor
                      cors:
                        allow_origin: ["*"]
                        allow_methods: GET, PUT, DELETE, POST, OPTIONS
                        allow_headers: keep-alive,user-agent,cache-control,content-type,content-transfer-encoding,x-accept-content-transfer-encoding,x-accept-response-streaming,x-user-agent,x-grpc-web,grpc-timeout
                        max_age: "1728000"
                        expose_headers: grpc-status,grpc-message,rpc.status-bin
  clusters:
    - name: scalar
      connect_timeout: 0.25s
      type: strict_dns
      http2_protocol_options: {}
      upstream_connection_options:
        tcp_keepalive:
          keepalive_time: 300
      lb_policy: round_robin
      load_assignment:
        cluster_name: scalar
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: scalar-lb.internal.scalar-labs.com
                      port_value: 50051
    - name: scalar-privileged
      connect_timeout: 0.25s
      type: strict_dns
      http2_protocol_options: {}
      upstream_connection_options:
        tcp_keepalive:
          keepalive_time: 300
      lb_policy: round_robin
      load_assignment:
        cluster_name: scalar-privileged
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: scalar-lb.internal.scalar-labs.com
                      port_value: 50052
    - name: monitor
      connect_timeout: 0.25s
      type: strict_dns
      upstream_connection_options:
        tcp_keepalive:
          keepalive_time: 300
      lb_policy: round_robin
      load_assignment:
        cluster_name: monitor
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: monitor.internal.scalar-labs.com
                      port_value: 9090
